[package]
name = "actor-ping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0"
actix-rt = "2.2" # <-- Runtime for actix
actix-macros = { version = "0.2", optional = true }
actix_derive = { version = "0.6", optional = true }
