[package]
name = "tokio_workerthread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
num_cpus = "1.0"
futures = "0.3.30"
console-subscriber = "0.1.0"

