[package]
name = "powerpingpong"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-telepathy = "0.6.0"
actix-rt = "2.9"
actix-broker = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
bincode = "1.3.3"
serde_bytes = "0.11.5"
tokio = { version = "1.33", features = ["full"] }

log = "0.4.14"
env_logger = "0.9.0"
structopt = "0.3.22"
rand = "0.8.4"
