[package]
name = "remote-response"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-telepathy = "0.6.0"
actix-rt = "2.9"
actix-broker = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
tokio = { version = "1.33", features = ["full"] }

log = "0.4"
env_logger = "0.10"
clap = { version = "4.4.8", features = ["derive"] }
uuid = "1.6.1"
