[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tiny-tokio-actor = "0.3"
warp = "0.3.6"
futures = "0.3.30"
tokio-stream = "0.1.14"
dotenvy = "0.15.7"
env_logger = "0.11.2"
uuid = { version = "1.4", features = ["v4"] }
log = "0.4.20"

